tests/e2e/corpus/err_superclass_not_class.err
[line 2] runtime error: superclass must be a class
