tests/e2e/corpus/err_superclass_not_class.lum
var notAClass = 10;
class Bad < notAClass {}
